# free-monads-in-cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: Free.h  Functor.h  List.h  Monad.h  void_t.h
test/: CMakeLists.txt  FreeTest.cpp  FunctorTest.cpp  ListTest.cpp  TestRunner.cpp
